--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -150,7 +150,7 @@ deploy:
         --timeout=800
         -f values.yaml
         --set image.tag=$CI_COMMIT_SHA
-        --set image.repository=$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG
+        --set image.repository=$CI_REGISTRY_IMAGE
         --set postgresql.postgresqlPassword=$DB_PASSWORD
         --set postgresql.postgresqlPostgresPassword=$DB_PASSWORD
         --set admin_password=$ADMIN_PASSWORD
