feature: code splitting
Why: faster initial loading.

--- a/.babelrc
+++ b/.babelrc
@@ -22,6 +22,7 @@
   "plugins": [
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-transform-runtime",
-    "@babel/plugin-transform-async-to-generator"
+    "@babel/plugin-transform-async-to-generator",
+    "@babel/plugin-syntax-dynamic-import"
   ]
 }
