--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -136,15 +136,15 @@ cucumber:
 
 deploy:
   stage: deploy
-  image: aronwolf/helm-doctl
+  image: alpine/k8s:1.16.8
   variables:
     GIT_STRATEGY: clone
   environment:
     name: production
     url: https://ticktensio.com
   script:
-    - doctl kubernetes cluster kubeconfig save webcloudpower
-    - helm init --client-only --stable-repo-url https://charts.helm.sh/stable
+    - mkdir -p ~/.kube/
+    - cp $KUBE_CONFIG ~/.kube/config
     - kubectl delete jobs -n cmc-production --all
     - helm upgrade cmc-production chart --install --wait --force
         --timeout=800
