fix: make connection to payment secure
Why: was forgotten to change default value.

--- a/chart/templates/web-deployment.yaml
+++ b/chart/templates/web-deployment.yaml
@@ -33,6 +33,8 @@ spec:
               name: {{ .Release.Name }}-mailer
           - secretRef:
               name: {{ .Release.Name }}-google
+          - secretRef:
+              name: {{ .Release.Name }}-payment
           volumeMounts:
             {{- if .Values.webPersistence.enabled }}
             - name: files
