fix: run cucumber when packates are updated

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -145,6 +145,10 @@ mocha:
       - Dockerfile
       - docker-compose.gitlab.yml
       - .dockerignore
+      - package.json
+      - Gemfile.lock
+      - Gemfile
+      - yarn.lock
     refs:
       - merge_requests
   script:
